@@ -1,6 +1,12 @@
 # ChangeLog for app-emacs/bbdb
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/bbdb/ChangeLog,v 1.34 2008/07/28 18:54:03 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emacs/bbdb/ChangeLog,v 1.35 2008/09/23 13:52:57 ulm Exp $
+
+*bbdb-2.35-r1 (23 Sep 2008)
+
+  23 Sep 2008; Ulrich Mueller <ulm@gentoo.org> +bbdb-2.35-r1.ebuild:
+  Install TeX support files under texmf-site/tex/plain. Simplify code for
+  byte-compilation of contributed files.
 
   28 Jul 2008; Ulrich Mueller <ulm@gentoo.org> metadata.xml:
   Add USE flag description to metadata wrt GLEP 56.
